--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,6 +31,7 @@
   -->
   </head>
   <body>
+  <nav><a href="/figures">All Figures</a> <a href="/figures/new">Create New Figure</a> <a href="/landmarks">All Landmarks</a> <a href="/landmarks/new">Create New Landmark</a> </nav>
     <%= yield %>
   </body>
 
