--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,6 @@
 <h2>All Historical Landmarks</h2>
 
-<!-- add content here -->
-
-<a class="button" href="/figures">Figures</a>
-<a class="button" href="/">Home</a>
+<% @landmarks.each do |landmark| %>
+    <h3> <%= landmark.name %> </h3>
+     <h4> <%= landmark.year_completed %> </h4>
+<% end %>
